Fixed responsivity on small devices

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -65,3 +65,9 @@ section {
   text-align: center;
   font-size: 1.5em;
 }
+
+@media (max-width: $smallWidth) {
+  .showcase {
+    text-align: center !important;
+  }
+}
